--- a/berat/BeratBadan/main/templates/main/create.html
+++ b/berat/BeratBadan/main/templates/main/create.html
@@ -1,11 +1,11 @@
 {% extends 'main/base.html' %}
 
-{% block title %} Dashboard {% endblock %}
+{% block title %} Create Page {% endblock %}
 
 {% block content %}
 <form method="post" action="/create">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit", name="save">Create Record</button>
+    <button type="submit" name="create" class="btn btn-success">Create Record</button>
 </form>
 {% endblock %}
