--- a/berat/BeratBadan/main/templates/main/create.html
+++ b/berat/BeratBadan/main/templates/main/create.html
@@ -3,9 +3,16 @@
 {% block title %} Create Page {% endblock %}
 
 {% block content %}
-<form method="post" action="/create">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" name="create" class="btn btn-success">Create Record</button>
-</form>
+<div id="content", name="content", class="main">
+    <div class="row justify-content-center">
+        <div class="col-4 p-md-5 border border-primary rounded border-5" style="margin-top: 300px; background-color:aliceblue;">
+                <form method="post" action="/create">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" name="create" class="btn btn-success">Create Record</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
