--- a/berat/BeratBadan/main/templates/main/index.html
+++ b/berat/BeratBadan/main/templates/main/index.html
@@ -3,27 +3,32 @@
 {% block title %} Home Page {% endblock %}
 
 {% block content %}
-	<table class="table">
-		<thead>
-	  		<tr>
-				<th scope="col">Tanggal</th>
-				<th scope="col">{{ls.date}}</th>
-	  		</tr>
-		</thead>
-		<tbody>
-		  	<tr>
-				<th scope="row">Max</th>
-				<td>{{ls.max}}</td>
-		  	</tr>
-		  	<tr>
-				<th scope="row">Min</th>
-				<td>{{ls.min}}</td>
-		  	</tr>
-		  	<tr>
-				<th scope="row">Perbedaan</th>
-				<td>{{ls.diff}}</td>
-		  	</tr>
-		</tbody>
-  	</table>
-
+<div id="content", name="content", class="main">
+    <div class="row justify-content-center">
+        <div class="col-4 p-md-5 border border-primary rounded border-5" style="margin-top: 300px; background-color:aliceblue;">
+		  	<table class="table table-responsive">
+				<table class="table table-dark">
+					<tbody>
+						<tr>
+							<th scope="col" class="thead-dark">Tanggal</th>
+							<th scope="col">{{ls.date}}</th>
+						</tr>
+						<tr>
+							<th scope="row" class="thead-dark">Max</th>
+							<td>{{ls.max}}</td>
+						</tr>
+						<tr>
+							<th scope="row" class="thead-dark">Min</th>
+							<td>{{ls.min}}</td>
+						</tr>
+						<tr>
+							<th scope="row" class="thead-dark">Perbedaan</th>
+							<td>{{ls.diff}}</td>
+						</tr>
+					</tbody>
+				</table>
+		  	</table>
+		</div>
+	</div>
+</div>
 {% endblock %}
